[package]
name = "redlox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redlox"
path = "src/main.rs"
bench = false

[lib]
name = "redlox"
path = "src/lib.rs"
bench = false

[dependencies]
anyhow = "1.0.70"
libc = "0.2.141"
thiserror = "1.0.40"

[features]
trace_execution = []
trace_stack = []
print_code = []
